bk_ida/gccida/c1/replace_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_rtx/src/rtlanal.c:2944:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_rtx/src/rtlanal.c:2946:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_rtx/src/rtlanal.c:2963:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_rtx/src/rtlanal.c:2965:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_rtx/src/obj/rtlanal.o] Error 1
